--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "project",
+  "name": "p",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "p": "nodemon server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "@sendgrid/mail": "^7.7.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1",
+    "nodemailer": "^6.9.5",
+    "nodemailer-smtp-transport": "^2.7.4",
     "oracledb": "^6.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
